tests/custom-3.2.3/compliant/node.yaml
apiVersion: v1
kind: Node
metadata:
  name: compliant-node
  annotations:
    kubelet.config.clientCAFile: "/etc/kubernetes/pki/ca.crt"
