tests/custom-3.2.3/compliant/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: custom-3.2.3-compliant
policies:
  - ../../../kyverno-policies/custom-3.2.3.yaml
resources:
  - node.yaml
results:
  - policy: custom-3-2-3-client-ca-file
    rule: check-client-ca-file
    resources:
      - compliant-node
    kind: Node
    result: pass
